--- a/example.hbs
+++ b/example.hbs
@@ -1,6 +1,19 @@
-{{#block-component property=value  prop-erty=value
-  onClick=(action "someAction" withParam) as |returnValue|}}
+<AngleBraketComponent
+  @mustache={{@bla}}
+  @number=123
+  data-test-id="test"
+  class="my-class" as |test|>
+  Some Text
+  <div>{{test.someValue}}</div>
+  <test.component teste="asdfads"></test.component>
+</AngleBraketComponent>
 
+<HelloAngleBrackets @prop={{test}} />
+
+<div class="my-css-class">{{test}}</div>
+
+{{#block-component property=@value  prop-erty=this.value string="testing"
+  onClick=(action "someAction" withParam) as |returnValue|}}
   {{#each-in foo as |bar, baz|}}
     {{inline-component foo=bar}}
   {{else if value}}
@@ -18,13 +31,12 @@
       {{{unescaped}}}
     </a>
 
+    <MyIput type="text" oninput={{action (mut fooBar) value="target.value"}} />
     <input type="text" oninput={{action (mut fooBar) value="target.value"}}>
 
     {{helper "string" 123}}
     {{input value="foo"}}
 
     {{textarea}}
-
   {{/each-in}}
-
 {{/block-component}}
