feat: add support for angle bracket invocation of nested components

--- a/example.hbs
+++ b/example.hbs
@@ -10,6 +10,8 @@
 
 <HelloAngleBrackets @prop={{test}} />
 
+<AngleBrackets::-Components::Nested />
+
 <div class="my-css-class">{{test}}</div>
 
 {{#block-component property=@value  prop-erty=this.value string="testing"
