Split out control flow keywords so they can be highlighted separately if someone wishes (not all themes support the full list of highlight keys

--- a/example.hbs
+++ b/example.hbs
@@ -18,18 +18,19 @@
   @arg={{12}}
   @argB={{hash
     foo="string"
-    bar=this.property
+    bar=true
     baz=120
     bax=(fn this.someAction 120)
   }}
   as |foo|
 >
   <:default>
-    named blocks
+    named blocks {{false}}
   </:default>
 
-  <:block as |foo|>
+  <:block as |foo, baz|>
     {{foo}}
+    <baz.component />
   </:block>
 </Nested::Component>
 
