Ignore less-than sigil in strings
Prior to this change, adding a > character in a string would terminate
the surrounding component highlighting.

This change adds the extend keyword to force Vim to ignore the keepend
keyword for contained hbsString.

    :help syn-extend

Fixes #12

--- a/example.hbs
+++ b/example.hbs
@@ -1,6 +1,7 @@
 <AngleBraketComponent
   @mustache={{@bla}}
   @number=123
+  @string="example handles > sigil"
   data-test-id="test"
   class="my-class" as |test|>
   Some Text
