Allow HBS inside strings
Prior to this change, strings didn't contain hbsMustache syntax

This change adds strings to the containedin clause. It does not include
the hbsMustacheBlock as that is not a thing inside strings.

--- a/example.hbs
+++ b/example.hbs
@@ -16,7 +16,7 @@
 <span
   class="
     some class
-    {{#if (helper-name this.condition)
+    {{if (helper-name this.condition)
       "classes if true"
       "classes if false"
     }}
